# LegacyWindow

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  DLL.h  DLLMain.cpp  LegacyDDraw.cpp  LegacyTimer.h  LegacyTypedefs.h  LegacyWin32.cpp  LegacyWindow.h  MinHookpp.h  WM.inl  WinMain.cpp
cmake/: FindDirectX.cmake
